<resources>
    <string name="app_name">WeatherWear</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Headers -->
    <string name="action_settings">Settings</string>
    <string name="my_closet">My Closet</string>
    <string name="todays_outfit">Today\'s Outfit</string>
    <string name="my_alarms">My Alarms</string>
    <string name="my_preferences">My Preferences</string>

    <!-- Preferences -->
    <string name="prefText_DisplayName">Display Name</string>
    <string name="prefDialog_DisplayName">Enter your name</string>
    <string name="prefCategory_UserProfile">User Profile</string>
    <string name="prefText_Gender">Gender</string>
    <string name="prefText_YourGender">Your gender</string>
    <string name="prefCategory_AccountSettings">Account Settings</string>
    <string name="checkboxPref_CurrentLocation">Use current location</string>
    <string name="checkboxPref_SetLocation">Set location</string>
    <string name="prefText_SetLocation">Set location (5-digit zipcode)</string>
    <string name="prefText_CurrentLocation">Current location</string>
    <string name="prefText_YourName">Your name</string>
    <string name="prefText_YourLocation">Your location</string>
    <string name="prefText_SetTemp">Set temperature</string>
    <string name="prefText_Farenheit">Farenheit</string>
    <string name="prefCategory_Website">Website</string>
    <string name="prefText_Website">Our website</string>
    <string name="prefText_WebsiteLink">http://weatherwearandroidapp.weebly.com/</string>

    <!-- Alarm Strings -->
    <string name="plus_btn">+</string>
    <string name="title_addAlarm">+</string>
    <string name="title_activity_alarm_scheduler">AlarmScheduler</string>
    <string name="text_SetAlarm">Set Alarm</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_save">SAVE</string>
    <string name="alarm_hint">Alarm Label</string>
    <string name="alarm_repeat_text">Repeat every:</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="alarmText">Today\'s outfit!</string>
    <string name="prefText_Notification">Display notifications</string>
    <string name="alarm_setDate">Choose date</string>
    <string name="alarm_settings_discarded_alarm_message">Alarm discarded.</string>
    <string name="alarm_settings_discarded_changes_message">Changes discarded.</string>
    <string name="alarm_settings_deleted_alarm_message">Alarm deleted.</string>
    <string name="alarm_settings_no_day_message">Choose a day!</string>
    <string name="alarm_settings_alarm_saved_message">Alarm saved!</string>
    <string name="alarm_fragment_on_text">ON</string>
    <string name="alarm_fragment_off_text">OFF</string>

    <!-- Create Clothing Item Strings -->
    <string name="item_type">Type:</string>
    <string name="item_type_main">Main Type:</string>
    <string name="item_type_sub">Subcategory:</string>
    <string name="item_cycle">Cycle Length:</string>
    <string name="cycle_length_hint">Min. days between uses</string>
    <string name="fall_button_text">Fall</string>
    <string name="winter_button_text">Winter</string>
    <string name="spring_button_text">Spring</string>
    <string name="summer_button_text">Summer</string>
    <string name="seasons_helper_text">Choose the seasons you would wear this in:</string>
    <string name="cancel_item_text">Cancel</string>
    <string name="save_item_text">Save</string>

    <!-- Vacation Strings -->
    <string name="title_activity_vacation_creator">VacationCreatorActivity</string>
    <string name="my_vacations">My Vacations</string>
    <string name="vacation_VacationCreator">Create Your Vacation</string>
    <string name="vacation_hint">zipcode</string>
    <string name="vacation_destination">Where are you going?</string>
    <string name="vacation_startDateTxt">START DATE: MM.DD.YYYY</string>
    <string name="vacation_endDateTxt">END DATE: MM.DD.YYYY</string>
    <string name="title_activity_vacation_outfits">VacationOutfitsActivity</string>
    <string name="vacation_VacationOutfits">My Outfits</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_vacation">Vacation discarded!</string>
    <string name="vacation_VacationOutfit">My Vacation Outfits</string>
    <string name="vacation_name">Name your vacation</string>
    <string name="vacation_Namehint">i.e. Maui, Hawaii</string>
    <string name="new_outfit">New Outfit</string>
    <string name="current_outfit">Current Outfit</string>

    <string name="preference_name">mKey</string>

    <!-- Display Item String -->
    <string name="display_item_new_item_bar">New Item</string>
    <string name="display_item_edit_item_bar">Edit Item</string>
    <string name="display_item_minimum_warning">Input a minimum number of days between wears!</string>
    <string name="display_item_season_warning">Item must be wearable in at least one season!</string>
    <string name="display_item_deleted_message">Item deleted!</string>
    <string name="display_item_updated_message">Item updated!</string>
    <string name="display_item_cancel_message">Clothing item discarded.</string>

    <!-- Vacation Creator Strings -->
    <string name="title_activity_display_outfits">DisplayOutfitActivity</string>
    <string name="vacation_creator_deleted_message">Vacation deleted</string>
    <string name="vacation_creator_zipcode_message">Zipcode must be 5 digits!</string>
    <string name="vacation_creator_input_message">Incomplete input!</string>
    <string name="vacation_creator_five_days_message">Currently only supports up to 5 days</string>
    <string name="vacation_creator_end_date_message">End date before start date!</string>
    <string name="outfit_fragment_no_outfit_message">You don\'t have an outfit!  Create an outfit using \'New\'!</string>
    <string name="vacation_creator_edit_vacation_title">Edit Your Vacation</string>
    <string name="vacations_outfits_activity_done">Done</string>
</resources>
