<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:text="@string/vacation_VacationCreator"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="?android:attr/actionBarSize">

            <TextView android:id="@+id/vacation_txt_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vacation_destination"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center_horizontal"/>

            <EditText android:id="@+id/vacation_createId"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/vacation_hint"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="100dp"
                android:paddingRight="100dp" />

            <Button android:id="@+id/vacation_startDatePicker"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/vacation_startDateTxt"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:onClick="onStartDateClick"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal" />

            <TextView android:id="@+id/vacation_txtStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vacation_dateDisplay"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:background="@drawable/txt_border"
                android:layout_margin="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"/>

            <Button android:id="@+id/vacation_endDatePicker"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/vacation_endDateTxt"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:onClick="onEndDateClick"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal" />

            <TextView android:id="@+id/vacation_txtEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vacation_dateDisplay"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:background="@drawable/txt_border"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_margin="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <at.markushi.ui.CircleButton
                    android:id="@+id/vacation_cancelButton"
                    android:layout_height="80dip"
                    android:layout_width="80dip"
                    android:layout_margin="15dp"
                    app:cb_color="@color/colorPrimaryDark"
                    app:cb_pressedRingWidth="8dip"
                    android:layout_gravity="center"
                    android:onClick="onGenerateClick" />


                <at.markushi.ui.CircleButton
                    android:id="@+id/generateOutfitButton"
                    android:layout_height="150dip"
                    android:layout_width="150dip"
                    android:layout_margin="5dp"
                    app:cb_color="@color/colorPrimaryDark"
                    app:cb_pressedRingWidth="8dip"
                    android:layout_gravity="center"
                    android:onClick="onGenerateClick" />

                <at.markushi.ui.CircleButton
                    android:id="@+id/vacation_saveButton"
                    android:layout_height="80dip"
                    android:layout_width="80dip"
                    android:layout_margin="15dp"
                    app:cb_color="@color/colorPrimaryDark"
                    app:cb_pressedRingWidth="8dip"
                    android:layout_gravity="center"
                    android:onClick="onGenerateClick"/>

            </LinearLayout>




        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
